# nilpoint_harness

./: .gitignore  .pre-commit-config.yaml  README.md  biome.json  pyproject.toml  todo.md
nilpoint_demo/: manage.py
nilpoint_demo/core/: urls.py  views.py
nilpoint_demo/core/templates/: base.jinja2  home.jinja2  newuser.jinja2
nilpoint_demo/cypherpunk/: admin.py  apps.py  models.py  modules.py  urls.py  views.py
nilpoint_demo/cypherpunk/migrations/: 0001_initial.py  0002_module_deck.py  0003_cypherpunkpc_alter_deck_player_character.py  0004_module_deck.py  0005_helpmodule.py
nilpoint_demo/nilpoint/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  nilpoint_settings.py  urls.py  views.py
nilpoint_demo/nilpoint/migrations/: 0001_initial.py  0002_alter_game_name_player.py  0003_remove_player_handle_playercharacter.py  0004_remove_game_name_game_instance_name.py  0005_game__game_type.py  0006_alter_player_user_alter_playercharacter_player.py  0007_playercharacter_game.py  0008_alter_game_instance_name.py  0009_game_instance_description_alter_game_instance_name.py  0010_game_nilpoint_slug.py  0011_auto_20260613_0618.py  0012_alter_game_nilpoint_slug.py  0013_game_allow_multiple_characters.py  0014_location_playercharacter_current_location.py  0015_rename_instance_description_location_description_and_more.py  0018_game_css.py  (+2 more)
nilpoint_demo/nilpoint_demo/: asgi.py  settings.py  urls.py  wsgi.py
nilpoint_harness/: manage.py
nilpoint_harness/core/: views.py
nilpoint_harness/nilpoint_harness/: asgi.py  settings.py  urls.py  wsgi.py
(+256 files in other folders)
