[project]
name = "nilpoint-demo"
version = "0.1.0"
description = "Django Point and Click"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cypherpunk",
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-extras>=0.3",
    "django-model-utils>=5.0.0",
    "ipython>=9.14.1",
    "nilpoint",
]

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "dcpi",
    "config",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]

[tool.uv.sources]
nilpoint = { path = "../nilpoint_core", editable = true }
cypherpunk = { path = "../cypherpunk", editable = true }

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
